--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/kartik7120/JWT_Implementation/issues"
   },
-  "homepage": "https://github.com/kartik7120/JWT_Implementation#readme"
+  "homepage": "https://github.com/kartik7120/JWT_Implementation#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
+  }
 }
